--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 @keyframes apear {
     from {
         opacity: 0;
-        transform: translateX(-100%);
+        transform: translateY(50%);
     }  
     to {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 .event {
